Topic and TopicApplication ednpoints changes
Changes made
- automatically assign student when creating TopicApplication
- automatically assign creator when creating Topic
- add endpoint for listing topic supervisors
- add endpoint for getting topic creator
